--- a/index.html
+++ b/index.html
@@ -35,21 +35,28 @@
 
       const { data: { user } } = await supabase.auth.getUser();
 
-      const { data: profile } = await supabase
-        .from("profiles")
-        .select("role")
-        .eq("user_id", user.id)
-        .single();
+     const { data: profile, error: profileError } = await supabase
+  .from("profiles")
+  .select("role")
+  .eq("auth_id", user.id)
+  .single();
 
-      if (profile.role === "teacher") {
-        window.location.href = "teacher.html";
-      } else if (profile.role === "parent") {
-        window.location.href = "parent.html";
-      } else if (profile.role === "admin") {
-        window.location.href = "admin.html";
-      } else {
-        alert("Unknown role");
-      }
+if (profileError || !profile) {
+  alert("Profile not found. Contact admin.");
+  return;
+}
+
+if (profile.role === "teacher") {
+  window.location.href = "teacher.html";
+} else if (profile.role === "parent") {
+  window.location.href = "parent.html";
+} else if (profile.role === "admin") {
+  window.location.href = "admin.html";
+} else {
+  alert("Unknown role");
+}
+
+      
     };
   </script>
 
