--- a/teacher.html
+++ b/teacher.html
@@ -1,19 +1,72 @@
-<script type="module">
-  import { supabase } from "./js/supabase.js";
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Teacher Dashboard</title>
+</head>
+<body>
 
-  const { data: { user } } = await supabase.auth.getUser();
+  <h2>Teacher Dashboard</h2>
+  <div id="classList">Loading classes...</div>
 
-  if (!user) {
-    window.location.href = "index.html";
-  }
+  <script type="module">
+    import { createClient } from "https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm";
 
-  const { data: profile } = await supabase
-    .from("profiles")
-    .select("role")
-    .eq("user_id", user.id)
-    .single();
+    const supabase = createClient(
+      "https://zcmzuetusvpmvubbjlmx.supabase.co",
+      "sb_publishable_-BGJLAySaH7bQ5lBIZF9zg_eohK-xEn"
+    );
 
-  if (profile.role !== "teacher") {
-    window.location.href = "index.html";
-  }
-</script>
+    // Guard: must be teacher
+    const { data: { user } } = await supabase.auth.getUser();
+    if (!user) window.location.href = "index.html";
+
+    const { data: profile } = await supabase
+      .from("profiles")
+      .select("role, school_id")
+      .eq("auth_id", user.id)
+      .single();
+
+    if (!profile || profile.role !== "teacher") {
+      window.location.href = "index.html";
+    }
+
+    // Fetch classes
+    const { data: classes, error } = await supabase
+      .from("classes")
+      .select(`
+        id,
+        name,
+        academic_year,
+        grades ( grade_number )
+      `)
+      .eq("school_id", profile.school_id);
+
+    if (error) {
+      document.getElementById("classList").innerText = "Failed to load classes";
+      return;
+    }
+
+    if (!classes.length) {
+      document.getElementById("classList").innerText = "No classes found";
+      return;
+    }
+
+    document.getElementById("classList").innerHTML = classes.map(c => `
+      <div style="border:1px solid #ccc; padding:10px; margin-bottom:10px;">
+        <strong>${c.name}</strong><br>
+        Grade: ${c.grades.grade_number}<br>
+        Academic Year: ${c.academic_year}<br>
+        <button onclick="startAssessment('${c.id}')">
+          Start Assessment
+        </button>
+      </div>
+    `).join("");
+
+    window.startAssessment = (classId) => {
+      localStorage.setItem("class_id", classId);
+      window.location.href = "new-assessment.html";
+    };
+  </script>
+
+</body>
+</html>
