--- a/assessment-competencies.html
+++ b/assessment-competencies.html
@@ -90,7 +90,7 @@
     .join("");
 
   /* 5️⃣ Save results */
-  document.getElementById("saveResults").onclick = async () => {
+ document.getElementById("saveResults").onclick = async () => {
   const competency_id = competencySelect.value;
   const achievement_level_id = achievementSelect.value;
   const remarks = document.getElementById("remark").value;
@@ -101,6 +101,26 @@
     return;
   }
 
+  /* 1️⃣ Prevent duplicate competency entries */
+  const { data: existing, error: checkError } = await supabase
+    .from("assessment_results")
+    .select("id")
+    .eq("assessment_id", assessmentId)
+    .eq("competency_id", competency_id)
+    .in("student_id", studentIds);
+
+  if (checkError) {
+    document.getElementById("status").innerText = checkError.message;
+    return;
+  }
+
+  if (existing.length > 0) {
+    document.getElementById("status").innerText =
+      "This competency has already been assessed for one or more selected students.";
+    return;
+  }
+
+  /* 2️⃣ Build rows AFTER passing check */
   const rows = studentIds.map(student_id => ({
     assessment_id: assessmentId,
     student_id,
@@ -111,6 +131,7 @@
     academic_year: assessment.academic_year
   }));
 
+  /* 3️⃣ Insert */
   const { error } = await supabase
     .from("assessment_results")
     .insert(rows);
@@ -123,6 +144,7 @@
   document.getElementById("status").innerText =
     "Results saved. You may assess another competency.";
 };
+
 
 </script>
 
